Bugfix clone metadata